# shadow

./: .env.example  .gitignore  .impeccable.md  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .flake8  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_use_firecrawl.py  003_add_email_verification.py  004_add_alert_clusters.py  005_add_beta_signups.py
backend/app/: config.py  logging_config.py  main.py  metrics.py
backend/app/api/: deps.py
backend/app/db/: mongodb.py  mongodb_sync.py  postgres.py  postgres_sync.py  redis.py
backend/app/middleware/: error_handler.py  rate_limit.py  request_logging.py
backend/app/models/: __init__.py  alert.py  alert_cluster.py  api_key.py  beta_signup.py  monitor.py  notification_setting.py  user.py
backend/app/schemas/: alert.py  analysis.py  auth.py  common.py  diff.py  monitor.py  noise_learning.py  notification.py  public.py  snapshot.py  user.py
backend/app/services/: alert_service.py  auth_service.py  monitor_service.py  notification_service.py
backend/app/utils/: pagination.py  security.py  validators.py
backend/scripts/: seed_data.py  seed_demo_data.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_alerts_api.py  test_auth_api.py  test_diffs_api.py  test_health_api.py  test_monitors_api.py  test_public_api.py  test_snapshots_api.py
backend/tests/unit/: conftest.py  test_adaptive_noise_learning.py  test_alert_clusterer.py  test_alert_service.py  test_api_router_mode.py  test_auth_service.py  test_claude_client.py  test_config.py  (+24 more)
backend/workers/: celery_app.py  celery_config.py
(+73 files in other folders)
