[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "competitor-monitor"
version = "0.1.0"
description = "Competitor Intelligence Monitor - Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "motor>=3.5.0",
    "pymongo>=4.8.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "pydantic[email]>=2.8.0",
    "pydantic-settings>=2.4.0",
    "anthropic>=0.34.0",
    "playwright>=1.45.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "sendgrid>=6.11.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "structlog>=24.4.0",
    "flower>=2.0.0",
    "firecrawl-py>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-httpx>=0.30.0",
    "factory-boy>=3.3.0",
    "respx>=0.21.0",
    "black>=24.4.0",
    "isort>=5.13.0",
    "flake8>=7.1.0",
    "mypy>=1.11.0",
    "types-redis>=4.6.0",
    "types-passlib>=1.7.0",
]

[tool.setuptools.packages.find]
include = ["app*", "workers*"]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
